fixed component covering only half page

--- a/styles/forms.module.css
+++ b/styles/forms.module.css
@@ -1,5 +1,6 @@
 /* General Form Styling */
 .formPage {
+    min-height: 100vh;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -8,7 +9,6 @@
 }
 
 .formContainer {
-	/* width: 40%; */
 	padding: 15px;
     border: 3px solid black;
 }
@@ -16,10 +16,6 @@
 .signupForm,
 .loginForm,
 .applicationForm {
-	/* margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 5px;
-    margin-right: 5px; */
     margin: 10px 5px;
 }
 
@@ -78,7 +74,10 @@
     border-bottom: 1px solid gray;
 }
 
-.appInput::selection {
+.appInput::selection,
+.appInput:focus {
+    border-style: none;
+    outline: none;
     border-bottom: 1px solid lightblue;
 }
 
