--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
+  min-height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -13,22 +14,4 @@ a {
 
 * {
   box-sizing: border-box;
-}
-
-.signupForm,
-.loginForm {
-    width: "30%";
-    padding: '20px'; 
-    margin: 'auto'
-}
-
-.linkContainer {
-    text-align: center;
-	display: "flex";
-	flex-direction: column;
-}
-
-.buttonContainer {
-    display: flex;
-    justify-content: center;
 }
